--- a/src/app/components/add-fault/add-fault.component.html
+++ b/src/app/components/add-fault/add-fault.component.html
@@ -20,7 +20,8 @@
    <!--<label for="isOpen">האם טופל?</label><br>
        <input type="checkbox" [checked]="true" name="isOpen" id="isOpen" (change)="changeOpen($event)"/><br><br>-->
 <label>:תיאור התקלה</label><br>
-<textarea rows="5" cols="30" name="textarea1" [(ngModel)]="newTakala.TakalaDescription"></textarea><br><br>
+<textarea rows="5" cols="30" name="textarea1" [(ngModel)]="newTakala.TakalaDescription"></textarea>
+<br><br>
 <button class="buttons" (click)="OKTakala()">יצירת תקלה</button>
     
    </form>
