--- a/src/app/components/dayar/dayar.component.html
+++ b/src/app/components/dayar/dayar.component.html
@@ -8,12 +8,12 @@
           <li class="nav-item">
             <a class="nav-link" href="#">שלום   {{this.d.dayar.FirstName}} {{this.d.dayar.LastName}}</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#aboutUs">אודותינו</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">יצירת קשר</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
@@ -30,7 +30,7 @@
        <div class="logo"></div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/dayar/deshbord">לוח נתונים</a><!--deshbord-->
+        <a class="nav-link" routerLink="/dayar/deshbord">דשבורד</a><!--deshbord-->
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/dayar/discourse-dayarim">לוח הודעות דיגיטלי</a><!--discourse-dayarim-->
