--- a/src/app/components/head-committee/head-committee.component.html
+++ b/src/app/components/head-committee/head-committee.component.html
@@ -9,8 +9,7 @@
         
           <li class="nav-item">
             <a class="nav-link" href="#">שלום   {{this.d.dayar.FirstName}} {{this.d.dayar.LastName}}</a>
-          </li>
-       
+          </li>      
           <li class="nav-item" *ngIf="dayarSer.dayar.BuildingId!=undefined">
             <a class="nav-link" href="#">{{this.buildingSer.buildingAddress.Street}}
               {{this.buildingSer.buildingAddress.NumBuilding}}<br>
@@ -29,7 +28,7 @@
        
           <a mat-list-item  routerLink="/headCommittee/deshbord"
          routerLinkActive="active_link">
-              <mat-icon>dashboard</mat-icon> &nbsp;לוח נתונים
+              <mat-icon>dashboard</mat-icon> &nbsp;דשבורד
           </a>
           <a mat-list-item
           
