--- a/src/app/components/list-dayarim/list-dayarim.component.html
+++ b/src/app/components/list-dayarim/list-dayarim.component.html
@@ -30,7 +30,8 @@
         </table>
     </div>
 <div *ngIf="listD1.length==0">
-    <table class="table">
+    <table class="table"><!--[value]="listD" [paginator]="true" [rows]="rows" [showCurrentPageReport]="true" [(first)]="first" responsiveLayout="scroll"
+        currentPageReportTemplate="{totalRecords} מציג {first} עד {last} מתוך" [rowsPerPageOptions]="[8,16,50]"-->
         <thead>
             <tr *ngIf="dayarSer.dayar.IsHouseCommittee" class="th">
                 <th class="topic" *ngFor="let topic of topics"> {{topic}} </th>
@@ -50,10 +51,16 @@
                 <td>{{Dayar.FirstName}}</td>
 
             </tr>
+            
         </thead>
     </table>
+    <!-- <p-paginator [rows]="4" [totalRecords]="120" [rowsPerPageOptions]="[10,20,30]"></p-paginator>
+    <p-paginator [rows]="4" [totalRecords]="100"></p-paginator> -->
+
+
+<!--<p-table class="table" >
+ <mat-paginator #paginator pageSize=6 showFirstLastButtons></mat-paginator> -->
 </div>
-<!-- <mat-paginator #paginator pageSize=6 showFirstLastButtons></mat-paginator> -->
 </div>
 
 <div *ngIf="isShow===false">
