--- a/src/app/components/bank-account/bank-account.component.html
+++ b/src/app/components/bank-account/bank-account.component.html
@@ -1,6 +1,6 @@
 <div class="center form-wrapper">
     <h1>אשף יצירת בניין חדש</h1>
-    <mat-icon class="icon-back" routerLink="/headCommittee/dayarDetails">arrow_back_ios</mat-icon>
+    <mat-icon class="icon-back" routerLink="/headCommittee/deshbord">arrow_back_ios</mat-icon>
     <a routerLink="/headCommittee/creatingBuilding">הגדרת בניין</a> &nbsp;
     <!-- <a routerLink="/headCommittee/dayarDetails"> > פרטי דיירים > </a> -->
     <a routerLink="/headCommittee/bankAccount">חשבון בנק</a>
