--- a/src/app/components/bank-transfers/bank-transfers.component.html
+++ b/src/app/components/bank-transfers/bank-transfers.component.html
@@ -1,5 +1,5 @@
 <div class="form-wrapper">
-   <mat-icon class="icon-back" (click)="back()">arrow_back_ios</mat-icon>
+   <!-- <mat-icon class="icon-back" (click)="back()">arrow_back_ios</mat-icon> -->
     <h1>פרטי חשבון בנק הוועד</h1>
     <p *ngIf="dayarSer.dayar.IsHouseCommittee">על מנת שנוכל להפקיד לכם את כספי הוועד שייגבו באשראי אנא מלאו או ערכו את
         פרטי חשבון בנק הוועד</p>
