--- a/src/app/components/committee-payments/committee-payments.component.css
+++ b/src/app/components/committee-payments/committee-payments.component.css
@@ -8,3 +8,8 @@
   .example-radio-button {
     margin: 2px;
   }
+  .dir-wrap{max-height: 200px;
+    overflow-y: auto;
+    position: relative;
+    display: block;
+    margin: 10px 0;}
