--- a/src/app/components/committee-payments/committee-payments.component.html
+++ b/src/app/components/committee-payments/committee-payments.component.html
@@ -13,20 +13,21 @@
         <mat-checkbox (change)="changeSelect(0)">כל הדיירים</mat-checkbox>
       </label>
     </div>
-    <div id="mySelectOptions" *ngFor="let Dayar of dayarSer.listD">
-      <label for="one"><input type="checkbox" [(ngModel)]="Dayar.sendMail" name="asas"
-          (change)="changeSelect(Dayar.DayarId)" value="one" />
-        {{Dayar.FirstName}} {{Dayar.LastName}} &nbsp;|&nbsp;  דירה מספר - {{Dayar.NumFlat}} <br></label>
+    <div class="dir-wrap">
+      <div id="mySelectOptions" *ngFor="let Dayar of dayarSer.listD">
+        <label for="one"><input type="checkbox" [(ngModel)]="Dayar.sendMail" name="asas"
+            (change)="changeSelect(Dayar.DayarId)" value="one" />
+          {{Dayar.FirstName}} {{Dayar.LastName}} &nbsp;|&nbsp; דירה מספר - {{Dayar.NumFlat}} <br></label>
+      </div>
     </div>
 
-    
     תשלום חודשי: <input type="radio" name="radio1" checked [value]="true" [(ngModel)]="paymentSer.radioB1"><br>
     תשלום חד פעמי:<input type="radio" name="radio1" [value]="false" [(ngModel)]="paymentSer.radioB1">
     <div *ngIf="!paymentSer.radioB1">
       <label for="paymentFor"> תשלום עבור:</label><br>
-    <input type="text" class="input" id="paymentFor" name="for" [(ngModel)]="payFor"><br>
+      <input type="text" class="input" id="paymentFor" name="for" [(ngModel)]="payFor"><br>
       <label for="sum"> סכום:</label><br>
-      <input type="text" class="input" id="sum" name="sum" [(ngModel)]="sum"><br>   
+      <input type="text" class="input" id="sum" name="sum" [(ngModel)]="sum"><br>
     </div><br><br>
     <button class="buttons" (click)="send()">שלח תזכורת לתשלום</button>
 
