--- a/src/app/components/dayar/dayar.component.html
+++ b/src/app/components/dayar/dayar.component.html
@@ -1,76 +1,63 @@
 
 
-<header>
-  <nav class="navbar navbar-expand-lg  fixed-top bg-danger shadow-lg p-3 mb-5 rounded opacity-75">
-    <div class="container-fluid" style="direction: rtl">
-      <div mdbCollapse class="collapse navbar-collapse" id="fixedNavbarExample">
-        <ul class="navbar-nav mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">שלום   {{this.d.dayar.FirstName}} {{this.d.dayar.LastName}}</a>
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#aboutUs">אודותינו</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">יצירת קשר</a>
-          </li> -->
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
-<div class="container mt-3">
-  <!-- {{this.d.dayar.FirstName}}
-  {{this.d.dayar.LastName}}<br> -->
-  <div *ngIf="dayarSer.dayar.BuildingId!=undefined">{{this.buildingSer.buildingAddress.Street}}
-    {{this.buildingSer.buildingAddress.NumBuilding}}<br>
-    {{this.city.CityName}}</div>
-    <ul class="nav flex-column">
-      <li class="nav-item">
-       <div class="logo"></div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/dayar/deshbord">דשבורד</a><!--deshbord-->
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/dayar/discourse-dayarim">לוח הודעות דיגיטלי</a><!--discourse-dayarim-->
-      </li>
-      <!--עם שינויים קלים-->
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/dayar/list-dayarim">רשימת דיירים</a><!--list-dayarim-->
-      </li>
-      <!--עם שינויים קלים-->
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/dayar/surveys">סקרים</a><!--surveys-->
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/dayar/faults">תקלות</a><!--faults-->
-      </li>
-     <li class="nav-item">
-        <a class="nav-link" routerLink="/dayar/bank-transfers">פרטי בנק</a>
-      </li> <!-- 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/dayar/receipts">קבלות</a>
-      </li>
-      
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/dayar/expenses">הוצאות</a>
-      </li>
-     
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/dayar/documents">מסמכים</a>
-      </li> -->
-       <!--?עם שינויים קלים-->
-      
-     
-    </ul>
-  </div>
-  <div class="bg"></div>
-  <div style="height: 88vh">
-     
-      <div class="content-div">
-          <router-outlet></router-outlet>
-      </div>
-  </div>
 
-<!-- <router-outlet></router-outlet> -->
+
+<mat-sidenav-container>
+  <mat-sidenav #sidenav opened mode="side" position="end" class="side-cont-admin">
+      <mat-nav-list>
+        <a mat-list-item  href="#">שלום   {{this.d.dayar.FirstName}} {{this.d.dayar.LastName}}</a>
+     
+        <!--כניסה לבניין-->     
+    
+          <a mat-list-item  *ngIf="dayarSer.dayar.BuildingId!=undefined" href="#">{{this.buildingSer.buildingAddress.Street}}
+            {{this.buildingSer.buildingAddress.NumBuilding}} <br>
+            {{this.city.CityName}}</a>
+      
+        <!--בהרשמה-->
+      
+        <a mat-list-item  *ngIf="dayarSer.dayar.BuildingId!=undefined && this.buildingSer.building"href="#">{{this.buildingSer.building.Street}}
+            {{this.buildingSer.building.NumBuilding}} <br>
+            {{this.buildingSer.city.CityName}}</a>  <hr>
+          <a mat-list-item  routerLink="/dayar/deshbord"
+         routerLinkActive="active_link">
+              <mat-icon>dashboard</mat-icon> &nbsp;דשבורד
+          </a>
+        
+          <a mat-list-item
+          
+          routerLink="/dayar/discourse-dayarim"
+          
+          routerLinkActive="active_link">
+              <mat-icon>message</mat-icon> &nbsp;לוח הודעות דיגיטלי
+          </a>
+
+        
+          <a mat-list-item routerLink="/dayar/list-dayarim" routerLinkActive="active_link">
+              <mat-icon>wc</mat-icon> &nbsp;רשימת דיירים
+          </a>
+          <a mat-list-item  routerLink="/dayar/surveys" routerLinkActive="active_link">
+              <mat-icon>star</mat-icon> &nbsp;סקרים
+          </a>
+          <a mat-list-item routerLink="/dayar/faults" routerLinkActive="active_link">
+            <mat-icon>error</mat-icon> &nbsp;תקלות
+        </a>
+      
+      <a mat-list-item   routerLink="/dayar/bank-transfers" routerLinkActive="active_link">
+        <mat-icon>money</mat-icon> &nbsp;פרטי בנק
+    </a>
+      </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+      <div class="bg"></div>
+      <div  class="logo">
+          
+      </div>
+      <div style="height: 100vh;">
+         
+          <div class="content-div">
+              <router-outlet></router-outlet>
+          </div>
+      </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
