--- a/src/app/components/discourse-dayarim/discourse-dayarim.component.css
+++ b/src/app/components/discourse-dayarim/discourse-dayarim.component.css
@@ -17,16 +17,18 @@
 li {
     background: white;
     padding: 2px 10px;
-    max-width: 500px;
+    max-width: 300px;
     font-size: 12px;
     color: #6d6d6d;
     box-shadow: 0 16px 38px -12px rgb(155 155 155 / 56%), 0 4px 25px 0 rgb(0 0 0 / 12%),
         0 8px 10px -5px rgb(0 0 0 / 20%);
-    margin: 1px;
-    display: block;
+        margin: 5px;
+        display: block;
+        margin-right: -50px;
+        border-radius: 15px;
 }
 li.li-user {
-    margin-right: 30px;
+    margin-right: 20px;
     background: #e7e7e7;
     box-shadow: 0px 1px 0px 0px rgb(105 105 105 / 56%), -2px 1px 5px 0px rgb(0 0 0 / 12%),
         1px -4px 10px 0px rgb(0 0 0 / 20%);
