--- a/src/app/components/newCommittee/newCommittee.component.html
+++ b/src/app/components/newCommittee/newCommittee.component.html
@@ -1,4 +1,6 @@
+<div class="bg"></div>
 <form class="backgroundcolor form-wrapper">
+    <mat-icon class="icon-back" (click)="back()">arrow_back_ios</mat-icon>
     <h1>חבר ועד? הירשם חינם!</h1>
     <h3>והתחילו לנהל את הבניין שלכם בצורה יעילה וחכמה.</h3>
     <div class="row-wrapper">
