--- a/src/app/components/faults/faults.component.css
+++ b/src/app/components/faults/faults.component.css
@@ -9,7 +9,9 @@
    
   }
   tr:nth-child(even){background-color: #f2f2f2}
-
+  tr:nth-child(odd) {
+    background-color: #ffffffa5;
+  }
   table {
     border-collapse: collapse;
     /* width: 100%; */
