--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -28,6 +28,14 @@ a {
 h3 {
   color: grey;
 }
+.logo{
+  position: absolute;
+  top: 80px;
+  right: 40px;
+  width: 193px;
+  background-size: cover;
+  height: 172px;
+}
 
 p {
   font-size: 16px;
