--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -3,7 +3,7 @@
     
     <mat-icon class="icon-back" (click)="back()">arrow_back_ios</mat-icon>
     <div *ngIf="survey.Type=='טקסט חופשי'">
-       <h3>{{survey.NumAnswers}} דיירים הגיבו </h3>
+       <h3 style="direction: rtl">{{survey.NumAnswers}} דיירים הגיבו </h3>
         <button *ngIf="dayarSer.dayar.IsHouseCommittee" (click)="showTheResponses()">לתגובות לחצו כאן</button>
         <div *ngIf="isShow==true">
             <ul>
