--- a/src/app/components/surveys/surveys.component.css
+++ b/src/app/components/surveys/surveys.component.css
@@ -12,6 +12,9 @@ tr {
 tr:nth-child(even) {
     background-color: #f2f2f2;
 }
+tr:nth-child(odd) {
+    background-color: #ffffffa5;
+}
 .table > thead > tr > td {
     text-align: center;
 }
@@ -21,7 +24,6 @@ table {
     margin: 0 auto;
     direction: rtl;
     width: 80%;
-    margin-right: 0;
     padding-right: 0;
     margin-top: 20px;
     box-shadow: 0 16px 38px -12px rgb(155 155 155 / 56%), 0 4px 25px 0 rgb(0 0 0 / 12%),
