--- a/src/app/components/add-fault/add-fault.component.html
+++ b/src/app/components/add-fault/add-fault.component.html
@@ -1,4 +1,5 @@
 <form class="form-wrapper">
+    <mat-icon class="icon-back" (click)="back()">arrow_back_ios</mat-icon>
     <h1>הוספת תקלה</h1>
     <!-- <label for="building">:בניין</label><br>
     <select id="building">
