--- a/src/app/components/deshbord/deshbord.component.html
+++ b/src/app/components/deshbord/deshbord.component.html
@@ -43,10 +43,10 @@
         </div>
     </div>
     <div class="row round-wrap">
-        <div class="col-6" style="display: block">
+        <strong class="col-6" style="display: block">
             <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [plugins]="barChartPlugins" [legend]="barChartLegend" [chartType]="barChartType">
             </canvas>
-          </div>
+        </strong>
         <div class="round">
             <p>תקלות בטיפול</p>
             <h2>{{deshbord.TakalotBetipul}}</h2>
