--- a/src/app/components/discourse-dayarim/discourse-dayarim.component.html
+++ b/src/app/components/discourse-dayarim/discourse-dayarim.component.html
@@ -1,4 +1,4 @@
-<h1 class="h1-title">שיח דיירים</h1>
+<h1 class="h1-title">לוח הודעות דיגיטלי</h1>
 <br>
 
 <input class="input" #MessageContent=ngModel id="MessageContent" name="MessageContent" type="string"
@@ -19,7 +19,7 @@
 
     </ul>
     <div class="col-6 form-wrapper">
-        <h3>שלום לכל דיירי הבניין!</h3>
+        <h2>שלום לכל דיירי הבניין!</h2>
         <p> אנחנו גאים להציג לכם את לוח שיח הדיירים החדש של ועד חכם<br>
             .הלוח מאפשר דו שיח בין כל דיירי הבניין בצורה פשוטה וידידותית<br>
             .כל אחד מהדיירים יכול לכתוב פוסט ללוח וכל אחד מהדיירים האחרים יכול להוסיף תגובה<br>
