--- a/src/app/components/discourse-dayarim/discourse-dayarim.component.css
+++ b/src/app/components/discourse-dayarim/discourse-dayarim.component.css
@@ -28,9 +28,9 @@ li {
         border-radius: 15px;
 }
 li.li-user {
-    margin-right: 20px;
+    margin-right: 270px;
     background: #e7e7e7;
-    box-shadow: 0px 1px 0px 0px rgb(105 105 105 / 56%), -2px 1px 5px 0px rgb(0 0 0 / 12%),
+    box-shadow: 0px 1px 0px 0px rgba(88, 87, 87, 0.56), -2px 1px 5px 0px rgb(0 0 0 / 12%),
         1px -4px 10px 0px rgb(0 0 0 / 20%);
 }
 ul {
@@ -40,8 +40,8 @@ ul {
 }
 .form-wrapper p {
     direction: ltr;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 24px;
-    color: #8d8d8d;
+    color: #7d7878;
     text-align: right;
 }
