--- a/src/app/components/creating-building/creating-building.component.html
+++ b/src/app/components/creating-building/creating-building.component.html
@@ -1,6 +1,7 @@
 <div class="center form-wrapper">
   <h1>אשף יצירת בניין חדש</h1>
-  <a routerLink="/headCommittee/creatingBuilding">הגדרת בניין </a>
+  <mat-icon class="icon-back" routerLink="/headCommittee/newCommittee">arrow_back_ios</mat-icon>
+  <a routerLink="/headCommittee/creatingBuilding">הגדרת בניין </a> &nbsp;
   <!--<a routerLink="/headCommittee/dayarDetails" (click)="next()"> > פרטי דיירים > </a> -->
   <a routerLink="/headCommittee/bankAccount">חשבון בנק</a>
   <h3>כתובת הבניין</h3>
